Layout problems in previewers solved.

--- a/pyproctgui/gui/static/wizard/css/main_menu.css
+++ b/pyproctgui/gui/static/wizard/css/main_menu.css
@@ -8,7 +8,7 @@
     height:400px;
     width:500px;
     overflow-y:auto;
-    overflow-x: hidden;  
+    overflow-x: hidden;
     background-color: #fff;
 }
 
@@ -40,7 +40,7 @@
 }
 
 .start_over_button:hover
-{ 
+{
 background-color:#AAAAAA;
 }
 
@@ -58,6 +58,14 @@ background-color:#AAAAAA;
 }
 
 .help_button:hover
-{ 
+{
 background-color:#AAAAAA;
+}
+
+td {
+    -moz-box-sizing: border-box;
+}
+
+input {
+    -moz-box-sizing: border-box;
 }
